# ProjetImmo

./: .gitattributes  .gitignore  README.md  analyse_exploratoire.ipynb  bentofile.yaml  feature andMore.ipynb  modeles.ipynb  pyproject.toml
data/: 2016_Building_Energy_Benchmarking_ML.csv  2016_Building_Energy_Benchmarking_Purge.csv  backup_2016_Building_Energy_Benchmarking_ML.csv  cleaned_2016_Building_Energy_Benchmarking_ML.csv  feature_engineered_2016_energy.csv  feature_engineered_2016_energy1.csv  feature_engineered_cleaned_for_bento.csv  outliers_surface_energy.csv  top_extreme_intensity_outliers.csv
scripts-bento/: save_model.py  service.py
scripts_bento/: save_model.py  service - back.py  service.py  test_api.py  test_save_model.py
