[project]
name = "projet6-conso-batiment"
version = "0.1.0"
description = "Projet ML & Date avec Jupyter"
authors = [
    {name = "Pascal Duval"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.4.7,<8.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "torch (>=2.9.0,<3.0.0)",
    "torchvision (>=0.24.0,<0.25.0)",
    "torchaudio (>=2.9.0,<3.0.0)",
    "xgboost (>=3.1.1,<4.0.0)",
    "bentoml (>=1.4.29,<2.0.0)",
    "pandera (>=0.26.1,<0.27.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
